fixes search border and dropdown text align

--- a/src/css/modal.styl
+++ b/src/css/modal.styl
@@ -15,6 +15,7 @@
 
 .print-input-text
   width 57%
+  border 1px solid #acacac !important
 
 .print-modal-label
   width 40%
